yeoldwiz.css
/* ... */
@font-face {
  font-family: dosfont;
  src: url(fonts/LessPerfectDOSVGA.ttf);
}

@font-face {
  font-family: iconmoon;
  src: url(fonts/icomoon.ttf);
}

@font-face {
  font-family: retro;
  src: url(fonts/setback-tt-brk.ttf);
}

@font-face {
  font-family: enigmax;
  src: url(fonts/enigmax.ttf);
}


@font-face {
  font-family: retro2;
  src: url(fonts/bitpap.medium.ttf);
}

:root {
  --nav-and-info-width: 20%
}

body {
  margin-top: 0px;
  margin-left: 0px;
  margin-right: 0;
  margin-bottom: 0;
  background-color: black;
  color: white;
  /* font-family: Arial, Helvetica, sans-serif; */
  font-family: dosfont;
  background-image: url("images/wood.png");
  background-repeat: repeat-y repeat-x;
  font-weight: lighter;
  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
  user-select: none;
}

.red {
  color: red; 
}

body::-webkit-scrollbar-button:double-button {
  border-color: transparent transparent #9b6a2f transparent;
}

body::-webkit-scrollbar {
  width: 20px;  
  z-index: 1;        
}

body::-webkit-scrollbar-track {
  background-color: var(--wizbrown);
  z-index: 1; 
}

body::-webkit-scrollbar-thumb {
  background-color: var(--wizblackfade);   
  z-index: 1;  
}

main.down {
  margin: auto;
  margin-top: 3rem;
  flex-direction: column;
  width: 20rem;
  align-items: center;
}

.down .face {
  width: 10rem;
  height: 12.9rem;
}

.hidden {
  visibility: hidden;
}

.noshow {
  display: none !important;
}

.hide-on-desktop {
  display: none;
}

.show-on-desktop {
  display: block;
}

h1 {
  font-size: 3rem;
  margin-bottom: 10px;
  text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
  text-align: center;
}

h2 {
  font-weight: lighter;
  font-size: 1.5rem;
  margin-bottom: 10px;
  text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
}

h3 {
  font-weight: lighter;
  font-size: 1.5rem;
  margin-bottom: 10px;
  text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
}

header {
  width: 100%;
  height: 2rem;
  background-color: rgb(59, 31, 17);
  display: block;
  position: fixed;
  z-index: 5;
  line-height: 2rem;
  padding-left: 1rem;
  /* font-family: retro2; */
  
  padding-top: 0.5rem;
}

.main-title {
  font-family: retro2;
  font-size: 1.5rem;
}

.sign-in {
  float: right;
  margin-right: 2em;
  line-height: 1.25em;
}

.sign-in a {
  text-decoration: none;
  color: white;
}

.sign-in:hover {
  cursor: pointer;
}

.sign-out {
  float: right;
  background-color: rgb(59, 31, 17);
  padding-right: 2em;
  padding-left: 2em;
  padding-top: .25em;
}

.sign-out:hover {
  cursor: pointer;
}

.icon.knight {
  display: inline-block;
  width: 1em;
  font-size: 1.25em;
  font-family: enigmax;
  padding-left: 0.5rem;
}

.error {
  color: red;
}

.dead{
  color: red;
  transform: rotate(180deg) scaleX(1) translateY(-6px);
}

.spin {
  animation-name: spin;
  animation-duration: 1900ms;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  /* transform-origin: center;  */
}

@keyframes spin {
  from {transform:rotate(0deg);}
  to {transform:rotate(360deg);}
}


.hamburger { 
  cursor: pointer; 
  line-height: 1.25em;
  padding-right: 0.5rem;
}

main {
  margin: 0 0 0 0;
  display: flex;
  flex-direction: row;
}

.disable-clicks {
  pointer-events: none;
}

.nav-and-info {
  height: 100%;
  width: 20rem;
  margin-top : 1rem;
  background-color: rgb(49, 32, 7, .5);
  position: fixed;
  flex: 0 auto auto;
  display: block;
  padding: 1.5rem;
  padding-top: 3.5rem;
} 

nav {
  margin-top: 1rem;
  text-align: center;
}

nav a {
  display: block;
  text-decoration: none;
  color: white;
  font-weight: lighter;
  font-size: 1.7rem;
  margin-bottom: 1.5rem;
  text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
  line-height: 1.2rem;
  cursor: pointer;
}

.info {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.info .face {
    /* zoom: 2; */
    width: 9rem;
    height: auto;
    image-rendering: pixelated;
    border: .5rem solid rgb(59, 31, 17);
}


.info h2, h3 {
  margin: 0;
}

.info h2 {
  font-size: 2rem;
}

.start-message {
  margin-top: 2rem;
}
.start-message .icon.knight {
  font-size: 2rem;
  margin-top: 1rem;
}

.error-message {
  font-size: 1rem;
  margin-top: 1rem;
}
.error-message .icon.knight {
  font-size: 2rem;
  margin-bottom: 1rem;
}

.loader {
  margin-top: 13rem;
  margin-left: 35%;
  width: 40rem;
  text-align: center;
  content-visibility: auto
}

.loader.loading-message .knight {
  margin: auto;
  font-size: 2.5rem;
  margin-top: 1rem;
  overflow: auto;
}

.loader .loader-bar {
  width: 30rem;
  height: 1rem;
  border-color: goldenrod;
  border-style: solid;
  margin: auto;
  /* background-color: green; */
}

.loader-bar .inner-bar {
  background-color: green;
  width: 0;
  height: 1rem;
}

.groups {
  margin-top: 3rem;
  margin-left: 25rem;
  margin-bottom: 25rem;
  display: none;
}


.group .trophy-piece {
  height: 3em;
  background-color: black;
  /* background-color: var(--wizbrown); */
  border-style: solid;
  padding: .40rem;
  border-color: goldenrod;
  border-radius: 3rem;
  padding-left: .75rem;
  padding-right: .75rem;
  cursor: pointer;
}

.group .trophy-piece img {
  height: 100%;
  overflow: hidden;
}

.trophy-piece.stand-alone img{
  height: 3rem;
}

.group .trophy-piece.short-pawn {
  padding-left: .25rem;
  padding-right: 0.25rem;
  padding-top: 0;
}

.group .trophy-piece.short-pawn img {
  height: 83%;
  margin-top: 25%;
}

.trophies {
  margin-top: 3rem;
  margin-left: 35%;
  /* margin-bottom: 25rem; */
  width: 40rem;
  text-align: center;
}

.trophies a.button {
  margin-top: 1rem;
}


.trophy-collection {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  border: .25rem;
  border-color: goldenrod;
  padding: 2rem;
}

.trophy-collection .trophy-piece {
  height: 9rem;
}


.groups.focus {
  display: block;
}
/* ... */

